# OES

./: .gitignore  LOGBOOK.md  LOGBOOK_DATED.md  README.md  main.py  mkdocs.yml  predict.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: index.md
docs/api/: data_loader.md  evaluation.md  guardrail.md  models_calibration.md  models_deep_learning.md  models_traditional.md  preprocessing.md  spatial.md  target_transform.md  temporal.md
docs/model_cards/: conv1d_classifier.md  conv1d_regressor.md  lstm_temporal.md  svm_classifier.md
notebooks/: 01_preprocessing.ipynb  02_classification.ipynb  03_temporal_analysis.ipynb
outputs/: bench_inspection_prep.md  preliminary_report.md
results/: ablation.csv  best.json  metrics.json  metrics_intensity_eval.json  metrics_intensity_rf_eval.json  metrics_spatiotemporal_eval.json  metrics_species_eval.json
scripts/: ablation.py  create_notebooks.py  download_libs_benchmark.py  evaluate_cap.py  final_eval.py  generate_report.py  make_oes_poster.py  make_poster_oes.py  plot_clusters.py  plot_shap.py  plot_spatial.py  plot_temporal_pca.py  snr_benchmark.py  train_temporal.py
src/: __init__.py  data_loader.py  evaluation.py  features.py  guardrail.py  intensity.py  optimization.py  preprocessing.py  spatial.py  species.py  target_transform.py  temporal.py  utils.py
tests/: test_attention.py  test_calibration.py  test_classifier.py  test_features.py  test_guardrail.py  test_intensity.py  test_optimization.py  test_preprocessing.py  test_spatial.py  test_species.py  test_temporal.py  test_utils.py
(+10 files in other folders)
