[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oes-spectral-analysis"
version = "1.0.0"
description = "Machine Learning pipeline for plasma OES spectral analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "torch>=1.10",
    "optuna>=3.0",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "tqdm>=4.62",
    "shap>=0.44",
    "netCDF4>=1.6",
    "tslearn>=0.6",
    "nbformat>=5.9",
]

[project.scripts]
oes-spectral = "main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
